Add upload WOTs, rename download WOT, add endpoints and core functionality
