# openapi.yaml
@@ -21,7 +21,7 @@ components:
           title: Id
           type: string
         stage:
-          $ref: '#/components/schemas/WorkType'
+          $ref: '#/components/schemas/WorkPackageType'
           description: Current stage of this dataset.
         title:
           description: The title of the dataset.
@@ -78,7 +78,7 @@ components:
           title: Id
           type: string
         stage:
-          $ref: '#/components/schemas/WorkType'
+          $ref: '#/components/schemas/WorkPackageType'
           description: Current stage of this dataset.
         title:
           description: The title of the dataset.
@@ -93,13 +93,80 @@ components:
       - expires
       title: DatasetWithExpiration
       type: object
+    UploadBox:
+      additionalProperties: false
+      description: A model describing an upload box that groups file uploads.
+      properties:
+        description:
+          anyOf:
+          - type: string
+          - type: 'null'
+          description: The description of the upload box.
+          title: Description
+        id:
+          description: The upload box ID.
+          format: uuid4
+          title: Id
+          type: string
+        title:
+          description: The title of the upload box.
+          title: Title
+          type: string
+      required:
+      - id
+      - title
+      title: UploadBox
+      type: object
+    WOTWorkType:
+      description: The type of work that a work order token authorizes.
+      enum:
+      - create
+      - upload
+      - close
+      - delete
+      - download
+      title: WOTWorkType
+      type: string
+    WorkOrderTokenRequest:
+      description: Request model for creating work order tokens.
+      properties:
+        alias:
+          anyOf:
+          - type: string
+          - type: 'null'
+          description: File alias (required for CREATE work type)
+          title: Alias
+        file_id:
+          anyOf:
+          - format: uuid4
+            type: string
+          - type: 'null'
+          description: File ID (required for UPLOAD, CLOSE, DELETE work types)
+          title: File Id
+        work_type:
+          $ref: '#/components/schemas/WOTWorkType'
+          description: The type of work order token to create
+      required:
+      - work_type
+      title: WorkOrderTokenRequest
+      type: object
     WorkPackageCreationData:
       additionalProperties: false
       description: All data necessary to create a work package.
       properties:
+        box_id:
+          anyOf:
+          - format: uuid4
+            type: string
+          - type: 'null'
+          description: ID of the upload box (for upload work packages)
+          title: Box Id
         dataset_id:
+          anyOf:
+          - type: string
+          - type: 'null'
+          description: ID of the dataset (for download work packages)
           title: Dataset Id
-          type: string
         file_ids:
           anyOf:
           - items:
@@ -110,13 +177,12 @@ components:
             are assumed as target.
           title: File Ids
         type:
-          $ref: '#/components/schemas/WorkType'
+          $ref: '#/components/schemas/WorkPackageType'
         user_public_crypt4gh_key:
           description: The user's public Crypt4GH key in base64 encoding
           title: User Public Crypt4Gh Key
           type: string
       required:
-      - dataset_id
       - type
       - user_public_crypt4gh_key
       title: WorkPackageCreationData
@@ -166,7 +232,7 @@ components:
           title: Files
           type: object
         type:
-          $ref: '#/components/schemas/WorkType'
+          $ref: '#/components/schemas/WorkPackageType'
       required:
       - type
       - files
@@ -174,12 +240,12 @@ components:
       - expires
       title: WorkPackageDetails
       type: object
-    WorkType:
+    WorkPackageType:
       description: The type of work that a work package describes.
       enum:
       - download
       - upload
-      title: WorkType
+      title: WorkPackageType
       type: string
   securitySchemes:
     HTTPBearer:
@@ -204,6 +270,37 @@ paths:
       summary: health
       tags:
       - WorkPackages
+  /users/{user_id}/boxes:
+    get:
+      description: Endpoint used to get details for all upload boxes that are accessible
+        to the given user.
+      operationId: get_upload_boxes
+      parameters:
+      - in: path
+        name: user_id
+        required: true
+        schema:
+          title: User Id
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/UploadBox'
+                title: Response 200 Get Upload Boxes
+                type: array
+          description: Upload boxes have been fetched.
+        '403':
+          description: Not authorized to get upload boxes.
+        '422':
+          description: Validation error in submitted user data.
+      security:
+      - HTTPBearer: []
+      summary: Get all upload boxes of the given user
+      tags:
+      - UploadBoxes
   /users/{user_id}/datasets:
     get:
       description: Endpoint used to get details for all datasets that are accessible
@@ -270,7 +367,7 @@ paths:
         name: work_package_id
         required: true
         schema:
-          format: uuid
+          format: uuid4
           title: Work Package Id
           type: string
       responses:
@@ -289,16 +386,58 @@ paths:
       summary: Get a work package
       tags:
       - WorkPackages
-  /work-packages/{work_package_id}/files/{file_id}/work-order-tokens:
+  /work-packages/{work_package_id}/boxes/{box_id}/work-order-tokens:
     post:
-      description: Endpoint used to create a work order token
-      operationId: create_work_order_token
+      description: Endpoint used to create a work order token for uploading a single
+        file
+      operationId: create_upload_work_order_token
       parameters:
       - in: path
         name: work_package_id
         required: true
         schema:
-          format: uuid
+          format: uuid4
+          title: Work Package Id
+          type: string
+      - in: path
+        name: box_id
+        required: true
+        schema:
+          format: uuid4
+          title: Box Id
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkOrderTokenRequest'
+        required: true
+      responses:
+        '201':
+          content:
+            application/json:
+              schema: {}
+          description: Work order token has been created.
+        '403':
+          description: Not authorized to create the work order token.
+        '422':
+          description: Validation error in submitted user data.
+      security:
+      - HTTPBearer: []
+      summary: Create a work order token for file upload operations
+      tags:
+      - WorkPackages
+  /work-packages/{work_package_id}/files/{file_id}/work-order-tokens:
+    post:
+      description: Endpoint used to create a work order token for downloading a single
+        file
+      operationId: create_download_work_order_token
+      parameters:
+      - in: path
+        name: work_package_id
+        required: true
+        schema:
+          format: uuid4
           title: Work Package Id
           type: string
       - in: path
@@ -319,7 +458,7 @@ paths:
           description: Validation error in submitted user data.
       security:
       - HTTPBearer: []
-      summary: Create a work order token
+      summary: Create a work order token for file download operations
       tags:
       - WorkPackages
 servers:
