# src/wps/adapters/inbound/fastapi_/routes.py
@@ -17,10 +17,10 @@
 """Module containing the main FastAPI router and all route functions."""
 
 import logging
-from uuid import UUID
 
 from fastapi import APIRouter, HTTPException, status
 from fastapi.responses import JSONResponse
+from pydantic import UUID4
 
 from wps.adapters.inbound.fastapi_.auth import UserAuthContext, WorkPackageAccessToken
 from wps.adapters.inbound.fastapi_.dummies import WorkPackageRepositoryDummy
@@ -28,6 +28,8 @@ from wps.constants import TRACER, WORK_ORDER_TOKEN_VALID_SECONDS
 from wps.core.models import (
     Dataset,
     DatasetWithExpiration,
+    UploadBox,
+    WorkOrderTokenRequest,
     WorkPackageCreationData,
     WorkPackageCreationResponse,
     WorkPackageDetails,
@@ -100,7 +102,7 @@ async def create_work_package(
 )
 @TRACER.start_as_current_span("routes.get_work_package")
 async def get_work_package(
-    work_package_id: UUID,
+    work_package_id: UUID4,
     repository: WorkPackageRepositoryDummy,
     work_package_access_token: WorkPackageAccessToken,
 ) -> WorkPackageDetails:
@@ -125,10 +127,10 @@ async def get_work_package(
 
 @router.post(
     "/work-packages/{work_package_id}/files/{file_id}/work-order-tokens",
-    operation_id="create_work_order_token",
+    operation_id="create_download_work_order_token",
     tags=["WorkPackages"],
-    summary="Create a work order token",
-    description="Endpoint used to create a work order token",
+    summary="Create a work order token for file download operations",
+    description="Endpoint used to create a work order token for downloading a single file",
     responses={
         201: {
             "description": "Work order token has been created.",
@@ -138,21 +140,67 @@ async def get_work_package(
     },
     status_code=201,
 )
-@TRACER.start_as_current_span("routes.create_work_order_token")
-async def create_work_order_token(
-    work_package_id: UUID,
+@TRACER.start_as_current_span("routes.create_download_work_order_token")
+async def create_download_work_order_token(
+    work_package_id: UUID4,
     file_id: str,
     repository: WorkPackageRepositoryDummy,
     work_package_access_token: WorkPackageAccessToken,
 ) -> JSONResponse:
-    """Get an encrypted work order token using a work package access token."""
+    """Get an encrypted work order token using a work package access token (legacy endpoint for downloads)."""
     try:
         if not (work_package_id and file_id and work_package_access_token):
             raise repository.WorkPackageAccessError
 
-        wot = await repository.work_order_token(
+        wot = await repository.get_download_wot(
             work_package_id=work_package_id,
             file_id=file_id,
+            check_valid=True,
+            work_package_access_token=work_package_access_token,
+        )
+
+        cache_control_header = {
+            "Cache-Control": f"max-age={WORK_ORDER_TOKEN_VALID_SECONDS}, private"
+        }
+        return JSONResponse(content=wot, status_code=201, headers=cache_control_header)
+    except repository.WorkPackageAccessError as error:
+        raise HTTPException(status_code=403, detail=str(error)) from error
+
+
+@router.post(
+    "/work-packages/{work_package_id}/boxes/{box_id}/work-order-tokens",
+    operation_id="create_upload_work_order_token",
+    tags=["WorkPackages"],
+    summary="Create a work order token for file upload operations",
+    description="Endpoint used to create a work order token for uploading a single file",
+    responses={
+        201: {
+            "description": "Work order token has been created.",
+        },
+        403: {"description": "Not authorized to create the work order token."},
+        422: {"description": "Validation error in submitted user data."},
+    },
+    status_code=201,
+)
+async def create_upload_work_order_token(
+    work_package_id: UUID4,
+    box_id: UUID4,
+    wot_request: WorkOrderTokenRequest,
+    repository: WorkPackageRepositoryDummy,
+    work_package_access_token: WorkPackageAccessToken,
+):
+    try:
+        if not (
+            work_package_id and box_id and wot_request and work_package_access_token
+        ):
+            raise repository.WorkPackageAccessError
+
+        wot = await repository.get_upload_wot(
+            work_package_id=work_package_id,
+            box_id=box_id,
+            work_type=wot_request.work_type,
+            alias=wot_request.alias,
+            file_id=wot_request.file_id,
             check_valid=True,
             work_package_access_token=work_package_access_token,
         )
@@ -196,3 +244,38 @@ async def get_datasets(
     except repository.WorkPackageAccessError as error:
         raise HTTPException(status_code=403, detail=str(error)) from error
     return datasets
+
+
+@router.get(
+    "/users/{user_id}/boxes",
+    operation_id="get_upload_boxes",
+    tags=["UploadBoxes"],
+    summary="Get all upload boxes of the given user",
+    description="Endpoint used to get details for all upload boxes"
+    " that are accessible to the given user.",
+    responses={
+        200: {
+            "model": list[UploadBox],
+            "description": "Upload boxes have been fetched.",
+        },
+        403: {"description": "Not authorized to get upload boxes."},
+        422: {"description": "Validation error in submitted user data."},
+    },
+    status_code=200,
+)
+@TRACER.start_as_current_span("routes.get_upload_boxes")
+async def get_upload_boxes(
+    user_id: str,
+    repository: WorkPackageRepositoryDummy,
+    auth_context: UserAuthContext,
+) -> list[UploadBox]:
+    """Get upload boxes using an internal auth token with a user context."""
+    try:
+        if user_id != auth_context.id:
+            raise repository.WorkPackageAccessError(
+                "Not authorized to get upload boxes"
+            )
+        upload_boxes = await repository.get_upload_boxes(auth_context=auth_context)
+    except repository.WorkPackageAccessError as error:
+        raise HTTPException(status_code=403, detail=str(error)) from error
+    return upload_boxes
